--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ slint = "1.14.1"
 arboard = "3.2"
 rand = "0.8"
 palette = "0.7"
-clipboard = "0.5"
+device_query = "1.1"
+global-hotkey = "0.4"
+scrap = "0.1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+ksni = { version = "0.3.3", default-features = false, features = ["blocking", "async-io"] }
 
 [build-dependencies]
 slint-build = "1.14.1"
