--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 
 [dependencies]
-slint = "1.14.1"
+slint = { version = "1.15.0", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
 arboard = "3.2"
 rand = "0.8"
 palette = "0.7"
@@ -17,4 +17,4 @@ serde_json = "1.0"
 ksni = { version = "0.3.3", default-features = false, features = ["blocking", "async-io"] }
 
 [build-dependencies]
-slint-build = "1.14.1"
+slint-build = "1.15.0"
