--- a/packaging/archtoys.desktop
+++ b/packaging/archtoys.desktop
@@ -5,4 +5,5 @@ Comment=System-wide color picker
 Exec=archtoys
 Icon=archtoys
 Terminal=false
+StartupWMClass=archtoys-bin
 Categories=Graphics;Utility;
