--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ scrap = "0.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 ksni = { version = "0.3.3", default-features = false, features = ["blocking", "async-io"] }
+image = { version = "0.24.7", default-features = false, features = ["png"] }
 
 [build-dependencies]
 slint-build = "1.15.0"
