--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Create release archive
         run: |
           mkdir -p dist
-          cp target/release/archtoys dist/archtoys
+          cp target/release/color-picker dist/archtoys
           tar -C dist -czf archtoys-linux-x86_64.tar.gz archtoys
 
       - name: Upload release asset
