--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
-target
+target/
+dist/
+Help!/
+
+*.AppImage
+archtoys-linux-x86_64.tar.gz
+
 *.gif
 image.png
+
+.DS_Store
+.vscode/
+.idea/
+
+/.SRCINFO
+/PKGBUILD
+/archtoys.install
+/Archtoys.png
